--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,12 +7,29 @@ output:
 
 
 ## Loading and preprocessing the data
-
+Following piece of code extracts the zip file in data directory and reads it into activityData variable.
+```{r}
+#system("unzip activity.zip -d data/")
+activityData <- read.csv("data/activity.csv")
+library(dplyr)
+library(ggplot2)
+```
 
 
 ## What is mean total number of steps taken per day?
 
+```{r results='asis'}
+completeData <- subset(activityData, complete.cases(activityData))
+groupedData <- completeData %>% group_by(date) %>% summarise(steps = mean(steps))
+g <- ggplot(groupedData, aes(date)) + geom_histogram(aes(y = steps), stat = "identity")
+g <- g + theme(axis.text.x = element_text(angle=90))
+print(g)
 
+averageSteps <- mean(groupedData$steps)
+medianSteps <- median(groupedData$steps)
+```
+
+The mean of total number of steps per day is `r averageSteps` and median is `r medianSteps`
 
 ## What is the average daily activity pattern?
 
